# CS338.O21

./: .gitignore  README.md  __init__.py  plant_disease.db  pyproject.toml  requirements.txt  run.sh
src/: __init__.py  db.py  image_processing.py  schema.sql  utils.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: base.html  home.html  result.html  upload.html
static/js/: main.js
templates/: base.html  result.html  upload.html
