[project]
name = "src"
version = "1.1.0"
description = "A web that helps users classify leaf diseases at ease"
dependencies = [
    "flask",
    "flask-cors",
    "tensorflow",
    "numpy",
    "gdown",
    "cloudinary",
    "python-dotenv",
    "pillow",
    "gunicorn",
    "waitress",
    "tensorflow-addons",
    "torch",
    "torchvision",
    "scikit-learn",
    "ultralytics",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"